--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://antonyuri26.github.io/surftrip-project",
   "name": "surftrip",
   "version": "1.0.0",
   "description": "Surftrip Landing Page",
